fix(pots): Fix overflow x

--- a/web/src/app/components/pot-card/pot-card.component.scss
+++ b/web/src/app/components/pot-card/pot-card.component.scss
@@ -7,6 +7,7 @@
     width: 100%;
     background-color: #FFF;
     border-radius: 5px;
+    box-sizing: border-box;
     margin: 20px 0;
     padding: 0 30px;
     box-shadow: 0px 1px 4px #E5E9F2;
